--- a/mnist_deep.ipynb
+++ b/mnist_deep.ipynb
@@ -143,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving graph to: C:\\Users\\cipi\\AppData\\Local\\Temp\\tmpxeyah263\n"
+      "Saving graph to: C:\\Users\\Lidia\\AppData\\Local\\Temp\\tmp6g585pwm\n"
      ]
     }
    ],
@@ -185,24 +185,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 0, training accuracy 0.14\n",
-      "step 100, training accuracy 0.84\n",
-      "test accuracy 0.907\n"
+      "step 0, training accuracy 0.101562\n"
      ]
     }
    ],
    "source": [
     "  with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
-    "    for i in range(200):\n",
-    "      batch = mnist.train.next_batch(50)\n",
+    "    for i in range(500):\n",
+    "      batch = mnist.train.next_batch(256)\n",
     "      if i % 100 == 0:\n",
     "        train_accuracy = accuracy.eval(feed_dict={\n",
     "            x: batch[0], y_: batch[1], keep_prob: 1.0})\n",
