--- a/porto_seguro_tf.ipynb
+++ b/porto_seguro_tf.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Lidia\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import pandas as pd\n",
@@ -14,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -26,25 +35,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_no_id = train.drop('id',axis=1)\n",
+    "train_no_id = train_no_id[['target','ps_ind_01',\n",
+    "'ps_ind_03',\n",
+    "'ps_ind_05_cat',\n",
+    "'ps_ind_07_bin',\n",
+    "'ps_ind_15',\n",
+    "'ps_ind_16_bin',\n",
+    "'ps_reg_01',\n",
+    "'ps_reg_02',\n",
+    "'ps_reg_03',\n",
+    "'ps_car_01_cat',\n",
+    "'ps_car_03_cat',\n",
+    "'ps_car_07_cat',\n",
+    "'ps_car_12',\n",
+    "'ps_car_13',\n",
+    "'ps_car_14',\n",
+    "'ps_car_15']]\n",
     "train70, train30 = train_test_split(train_no_id,test_size=0.3,random_state=192)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "with tf.name_scope('logres'):\n",
-    "    x = tf.placeholder(tf.float32, [None, 57])\n",
-    "    W = tf.Variable(tf.zeros([57, 1]))\n",
+    "    x = tf.placeholder(tf.float32, [None, 16])\n",
+    "    W = tf.Variable(tf.zeros([16, 1]))\n",
     "    b = tf.Variable(tf.zeros([1]))\n",
     "    y = tf.matmul(x, W)+b\n",
     "    y_ = tf.placeholder(tf.float32, [None, 1])"
@@ -52,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -60,13 +87,15 @@
    "source": [
     "with tf.name_scope('loss'):\n",
     "    cross_entropy = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(labels=y_, logits=y))\n",
-    "    train_step = tf.train.GradientDescentOptimizer(0.005).minimize(cross_entropy)"
+    "    train_step = tf.train.AdamOptimizer(0.05).minimize(cross_entropy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with tf.name_scope('accuracy'):\n",
@@ -75,34 +104,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.0, 0.49150965)\n",
-      "(0.0, 0.50404871)\n",
-      "(0.0, 0.51595974)\n",
-      "(0.0, 0.52095807)\n",
-      "(0.0, 0.51513648)\n"
+      "(0.0, 0.56789261)\n",
+      "(0.0, 0.55299842)\n",
+      "(0.0, 0.52935439)\n",
+      "(0.0, 0.57008266)\n",
+      "(0.0, 0.54601264)\n",
+      "(0.0, 0.54097188)\n",
+      "(0.0, 0.57708937)\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-24-e41df8387c86>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m50\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m             \u001b[0mtrain_batch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain70\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msample\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfrac\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.0001\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m             \u001b[0mbatch_xs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_batch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'target'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m             \u001b[0mbatch_ys\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_batch\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'target'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_batch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36msample\u001b[1;34m(self, n, frac, replace, weights, random_state, axis)\u001b[0m\n\u001b[0;32m   2899\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2900\u001b[0m         \u001b[0mlocs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maxis_length\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mweights\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2901\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlocs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mis_copy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2902\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2903\u001b[0m     _shared_docs['pipe'] = (\"\"\"\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
-    "    for j in range(5):\n",
+    "    for j in range(50):\n",
     "        for i in range(100):\n",
-    "            train_batch = train70.sample(frac=0.001).reset_index(drop=True)\n",
+    "            train_batch = train70.sample(frac=0.0001)\n",
     "            batch_xs = train_batch.drop('target',axis=1)\n",
     "            batch_ys = train_batch['target'].values.reshape(train_batch.shape[0],1)\n",
     "            sess.run(train_step, feed_dict={x: batch_xs, y_: batch_ys})\n",
-    "            \n",
     "        sess.run(tf.local_variables_initializer())\n",
     "        print(sess.run(accuracy_op,feed_dict={x: train70.drop('target',axis=1), y_: train70['target'].values.reshape(train70.shape[0],1)})) \n",
-    "    "
+    "    sess.run(tf.local_variables_initializer())\n",
+    "    print(sess.run(accuracy_op,feed_dict={x: train30.drop('target',axis=1), y_: train30['target'].values.reshape(train30.shape[0],1)}))     "
    ]
   },
   {
