--- a/porto_seguro.ipynb
+++ b/porto_seguro.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -23,8 +23,6 @@
      "output_type": "stream",
      "text": [
       "(0.0, 0.66666609)\n",
-      "0.666666666667\n",
-      "0.666666666667\n",
       "0.666666666667\n"
      ]
     }
@@ -46,29 +44,25 @@
     "\n",
     "print(train_auc)\n",
     "from sklearn.metrics import roc_auc_score\n",
-    "print(roc_auc_score(av, bv))\n",
-    "print(roc_auc_score(av, bv))\n",
     "print(roc_auc_score(av, bv))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.0, 0.50000024)\n",
-      "(0.50000024, 0.50000012)\n",
-      "(0.0, 0.50000024)\n"
+      "(0.0, 0.5)\n"
      ]
     }
    ],
    "source": [
-    "av=[0,1,0]\n",
-    "bv=[[0.2,0.5,0.1,0.7],[0.2,0.5,0.4,0.7],[-0.232,0.35,0.14,0.87]]\n",
+    "av=[0,1]\n",
+    "bv=[[0.2,0.5,0.1,0.7],[0.2,0.5,0.1,0.7]]\n",
     "\n",
     "with tf.name_scope('reshape'):\n",
     "    x = tf.Variable(bv)\n",
@@ -80,11 +74,7 @@
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
     "    sess.run(tf.local_variables_initializer())\n",
-    "    print(sess.run(gini))\n",
-    "    print(sess.run(gini))\n",
-    "    sess.run(tf.local_variables_initializer())\n",
-    "    print(sess.run(gini))\n",
-    "    "
+    "    print(sess.run(gini))"
    ]
   },
   {
